# light_manager

./: .syntastic_cpp_config  .vimrc  README.md  arduino.mk  client.mk  common.mk  node.mk  server.mk  sink.mk
include/: common.hpp  config.hpp  message.hpp  nrf24l01.hpp  nrf24l01defs.hpp  nrfmesh.hpp  rand.hpp
slides/: .gitignore  Makefile  latex.mk  slides.tex
src/: client.cpp  common.cpp  node.cpp  server.cpp  sink.cpp
webui/: .gitignore  Cargo.toml  Makefile  Rocket.toml
webui/src/: comm.rs  device.rs  events.rs  keeper.rs  main.rs
webui/static/: index.html  style.css  webui.js
