[package]
name = "webui"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]

[dependencies]
rocket = "0.2.6"
rocket_codegen = "0.2.6"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
rusqlite = "0.11.0"

[dependencies.rocket_contrib]
version = "0.2.6"
default-features = false
features = ["json"]

